syntax = "proto2";
package PTP.Msg;
import "PTP.Common.proto";
option java_package = "chat.wai.protobuf";

option optimize_for = LITE_RUNTIME;

message RemoveMessagesReq{
  repeated uint32 messageIds = 1;
  required string chatId = 2;
}

message RemoveMessagesRes{
  required Common.ERR err = 100;
}

message GenMsgIdReq{
  required bool isLocal = 1;
}

message GenMsgIdRes{
  required uint64 messageId =1;
  optional Common.ERR err = 100;
}

message UploadMsgReq{
  repeated bytes messages = 1;
  required string chatId = 2;
}

message UploadMsgRes{
  required Common.UserMessageStoreData userMessageStoreData = 1;
  optional Common.ERR err = 100;

}

message DownloadMsgReq{
  required string chatId = 1;
  optional uint64 time = 2;
}

message DownloadMsgRes{
  repeated bytes messages = 1;
  optional Common.UserMessageStoreData userMessageStoreData = 2;
  optional Common.ERR err = 100;
}

message UpdateCmdReq{
  optional string botApi = 1;
  required string chatId = 2;
}

message UpdateCmdRes{
  repeated Common.PbCommands commands = 1;
  optional string chatId = 2;
  optional string startTips = 3;
}

message SendBotMsgReq{
  optional string chatId = 1;
  optional string botApi = 2;
  optional string text = 3;
  optional string chatGpt = 4;
  optional uint32 msgId = 5;
}

message SendBotMsgRes{
  optional string reply = 1;
  optional string chatId = 2;
  optional uint32 msgId = 3;
  optional Common.ChatGptStreamStatus streamStatus = 4;
  optional Common.PbMsg message = 5;
}
